[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "grip-py-demo"
version = "0.1.0"
description = "PySide6 demo app for grip-py"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "grip-py",
  "grip-pyrolyze",
  "httpx>=0.27",
  "PySide6>=6.6",
  "pyrolyze",
]

[project.optional-dependencies]
dev = [
  "pytest>=9.0",
]

[project.scripts]
grip-py-demo = "grip_py_demo.main:main"
grip-pyrolyze-demo = "grip_pyrolyze_demo.main:main"

[tool.uv.sources]
grip-py = { path = "../grip-py", editable = true }
grip-pyrolyze = { path = "../grip-pyrolyze", editable = true }
pyrolyze = { path = "../pyrolyze", editable = true }

[tool.hatch.build.targets.wheel]
packages = ["src/grip_py_demo", "src/grip_pyrolyze_demo"]

[tool.pytest.ini_options]
testpaths = ["tests"]
